dark mode for cards fixed

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -47,6 +47,7 @@ $paragraph-margin-bottom: 0;
 }
 .dark-blue{
   background: $dark-blue;
+  color: #ffffff;
 }
 
 //import bootstrap
